# aoc2022

./: .gitignore  pyproject.toml
aoc2022/day1/: calorie_counts.py
aoc2022/day2/: rock_paper_scissors.py
aoc2022/day3/: rucksacks.py
aoc2022/day4/: camp_cleanup.py  camp_cleanup_no_sets.py
aoc2022/day5/: supply_stacks.py
aoc2022/day6/: part_b.txt  tuning_trouble.py
aoc2022/day7/: file_system.py  part_a.txt
aoc2022/utils/: __init__.py
tests/: test_calorie_counts.py  test_camp_cleanup.py  test_camp_cleanup_no_sets.py  test_file_system.py  test_rock_paper_scissors.py  test_rucksacks.py  test_supply_stacks.py  test_tuning_trouble.py
